# raspi-scd41-exporter

./: Cargo.toml
src/: main.rs  raspi.rs  scd41.rs
